gateway/security/jwt/entraID/employees/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: employees-ingress
  annotations:
    hub.traefik.io/api: employees-api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`employees.traefik-airlines`) || Host(`employees.traefik-airlines.localhost`)
      services:
        - name: employees-app
          port: 3000
